--- a/app/src/main/res/layout/fragment_meeting_list.xml
+++ b/app/src/main/res/layout/fragment_meeting_list.xml
@@ -6,11 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recycler_view"
-    android:name="com.example.mareu.MeetingsListFragment"
+    android:name="com.example.mareu.MeetingListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.example.mareu.ui.MeetingsListFragment"
-    tools:listitem="@layout/item_meetings_list" />
+    tools:context="com.example.mareu.ui.MeetingListFragment"
+    tools:listitem="@layout/item_meeting_list" />
